--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,19 +17,35 @@ a {
 
 .mySwiper {
   /* border: 1px solid red; */
+  /* max-width: 900px !important; */
 }
-.css-0 {
-  position: relative !important;
+@media screen and (max-width: 700px) {
+  .mySwiper {
+    /* border: 1px solid red; */
+    max-width: 581px !important;
+  }
+}
+@media screen and (max-width: 500px) {
+  .mySwiper {
+    /* border: 1px solid red; */
+    max-width: 281px !important;
+  }
+}
+
+.slides{
+  max-width: 281px !important;
 }
 .swiper-3d .swiper-slide-shadow {
   background: transparent !important;
 }
 .swiper-slide-active {
 }
-.swiper-slide-active > div {
+.service .swiper-slide-active > div {
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.7) !important;
 }
-
+.service {
+  position: relative !important;
+}
 .service .swiper {
   position: unset !important;
   overflow: hidden;
@@ -39,7 +55,7 @@ a {
   left: 50%;
   top: 50%;
 }
-.swiper-backface-hidden .swiper-slide {
+.service .swiper-backface-hidden .swiper-slide {
   background: #000;
   max-width: 281px;
   min-width: 281px;
@@ -82,4 +98,20 @@ a {
   opacity: 1;
   background: #efc862 !important;
   border: 2px none;
+}
+
+.work {
+  filter: drop-shadow(2px 2px 5px rgba(0, 0, 0, 0.25));
+}
+.work > div {
+  transition: all 0.5s;
+}
+.work:hover > div {
+  opacity: 1;
+}
+.work img {
+  transition: all 0.5s;
+}
+.work:hover img {
+  transform: scale(1.1);
 }
