--- a/styles/globals.css
+++ b/styles/globals.css
@@ -54,12 +54,16 @@ a {
 .service {
   position: relative !important;
 }
-.swiper-backface-hidden .swiper-slide > img {
+.swiper-slide{
+  border-radius: 20px !important;
+}
+.swiper-backface-hidden .swiper-slide div img {
   transition: transform 1s;
 }
 .swiper-backface-hidden .swiper-slide:hover div img {
   transition: transform 1s;
   transform: scale(1.2);
+  overflow: hidden;
 }
 
 .swiper-slide {
@@ -113,5 +117,10 @@ a {
 @media screen and (min-width: 768px) {
   .swiper-container {
     width: 768px;
+  }
+}
+@media screen and (min-width: 440px) {
+  .swiper-container {
+    width: 440px;
   }
 }
