--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,22 +1,28 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,500;0,700;1,400;1,800&display=swap");
+
 html {
-  scroll-behavior: smooth;
+    scroll-behavior: smooth;
 }
 
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    padding: 0;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+        Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
+}
+.design * {
+    font-family: "Nunito", sans-serif;
+    
 }
 
 /* .slides {
@@ -52,22 +58,22 @@ a {
 }
 */
 .service .swiper {
-  position: unset !important;
+    position: unset !important;
 }
 
 .service {
-  position: relative !important;
+    position: relative !important;
 }
-.swiper-slide{
-  border-radius: 20px !important;
+.swiper-slide {
+    border-radius: 20px !important;
 }
 .swiper-backface-hidden .swiper-slide div img {
-  transition: transform 1s;
+    transition: transform 1s;
 }
 .swiper-backface-hidden .swiper-slide:hover div img {
-  transition: transform 1s;
-  transform: scale(1.2);
-  overflow: hidden;
+    transition: transform 1s;
+    transform: scale(1.2);
+    overflow: hidden;
 }
 
 .swiper-slide {
@@ -77,60 +83,60 @@ a {
 .swiper-pagination-bullets.swiper-pagination-horizontal,
 .swiper-pagination-custom,
 .swiper-pagination-fraction {
-  bottom: -60px !important;
-  left: 0;
-  width: 100%;
+    bottom: -60px !important;
+    left: 0;
+    width: 100%;
 }
 
 .service .swiper-pagination-bullet {
-  background-color: #fff !important;
-  border: 2px solid #efc862;
-  width: 20px !important;
-  height: 20px !important;
-  opacity: 1;
+    background-color: #fff !important;
+    border: 2px solid #efc862;
+    width: 20px !important;
+    height: 20px !important;
+    opacity: 1;
 }
 
 .service .swiper-pagination-bullet-active {
-  opacity: 1;
-  background: #efc862 !important;
-  border: 2px none;
+    opacity: 1;
+    background: #efc862 !important;
+    border: 2px none;
 }
 
 .work {
-  filter: drop-shadow(2px 2px 5px rgba(0, 0, 0, 0.25));
+    filter: drop-shadow(2px 2px 5px rgba(0, 0, 0, 0.25));
 }
 .work > div {
-  transition: all 0.5s;
+    transition: all 0.5s;
 }
 .work:hover > div {
-  opacity: 1;
+    opacity: 1;
 }
 .work img {
-  transition: all 0.5s;
+    transition: all 0.5s;
 }
 .work:hover img {
-  transform: scale(1.1);
+    transform: scale(1.1);
 }
 
 @media screen and (min-width: 640px) {
-  .swiper-container {
-    width: 640px;
-  }
+    .swiper-container {
+        width: 640px;
+    }
 }
 
 @media screen and (min-width: 768px) {
-  .swiper-container {
-    width: 768px;
-  }
+    .swiper-container {
+        width: 768px;
+    }
 }
 @media screen and (min-width: 440px) {
-  .swiper-container {
-    width: 440px;
-  }
+    .swiper-container {
+        width: 440px;
+    }
 }
 
 @media screen and (min-width: 1440px) {
-  .swiper-container {
-    width: 940px;
-  }
+    .swiper-container {
+        width: 940px;
+    }
 }
