--- a/styles/globals.css
+++ b/styles/globals.css
@@ -138,5 +138,6 @@ a {
 @media screen and (min-width: 1440px) {
     .swiper-container {
         width: 940px;
+        color: rgba(80, 72, 79, 0.894);
     }
 }
